fix spacing on show page

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -35,3 +35,8 @@
   text-decoration: underline;
   color: #000099;
 }
+
+.gamedata {
+  position: relative;
+  left: -85px;
+}
